--- a/src/main/java/interfaces/RegistroAnfi.form
+++ b/src/main/java/interfaces/RegistroAnfi.form
@@ -46,11 +46,11 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Avenir" size="18" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="REGISTRO "/>
+            <Property name="text" type="java.lang.String" value="REGISTRO ANFITRION"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="310" y="20" width="-1" height="-1"/>
+              <AbsoluteConstraints x="270" y="20" width="-1" height="-1"/>
             </Constraint>
           </Constraints>
         </Component>
