--- a/src/main/java/interfaces/RegistroAnfi.form
+++ b/src/main/java/interfaces/RegistroAnfi.form
@@ -44,13 +44,13 @@
         <Component class="javax.swing.JLabel" name="jLabel1">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Avenir" size="18" style="0"/>
+              <Font name="Avenir" size="18" style="2"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="REGISTRO ANFITRION"/>
+            <Property name="text" type="java.lang.String" value="REGISTRO ANFITRI&#xd3;N"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="270" y="20" width="-1" height="-1"/>
+              <AbsoluteConstraints x="270" y="30" width="-1" height="-1"/>
             </Constraint>
           </Constraints>
         </Component>
